新增JVM的MinorGC、对象分配规则